login screen UI and sign up stage 1 UI done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FirebaseDemo</string>
+    <string name="app_name">FitVoo</string>
     <string name="title_activity_maps">Map</string>
 
     <string name="facebook_app_id">1630810627151473</string>
